--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "feedbackapp-trevesty",
   "version": "0.1.0",
+  "proxy": "http://localhost:2000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "concurrently": "^7.1.0",
     "daisyui": "^2.13.6",
     "framer-motion": "^4.1.17",
+    "http-proxy-middleware": "^2.0.4",
     "json-server": "^0.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -23,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 6000",
+    "server": "json-server --watch db.json --port 2000",
     "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
